discussion/kv_engine/174669/174669_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Add "wait-for-persistence" to rangeScanCreate

Add to the range-scan-create path a "wait-for-persistence" for
feature which allows the clients creation to specify a uuid/seqno
and timeout.

If the vbucket uuid matches and the seqno hasn't been persisted
the command will wait for the timeout (using ewouldblock).

This now means that the range-scan-create path now can perform two
ewouldblock steps.

1) The wait for persistence to be satisfied and notify
2) The wait for RangeScanCreateTask to run and notify

The state a in-progress range-scan-create is in is now captured in the
state variable which is stored in the engine-specific.

Pending is the initial state
WaitForPersistence waiting for SeqnoPersistenceRequest
Create waiting for RangeScanCreateTask

Change-Id: I8090059f16ad4aa8e7768d73fb3f7cdd746ffb6a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-10 15:07:56.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-10 15:44:18.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46045/ : FAILURE

Compile error at C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\VC\Tools\MSVC\14.16.27023\include\memory(2082): error C2027: use of undefined type "RangeScanDataHandlerIFace" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46045/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17404/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:97:13: warning: pass by value and use std::move [modernize-pass-by-value]
            std::function<void(const SeqnoPersistenceRequest&)> timedout)
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:33:10: error: no template named "optional" in namespace "std" [clang-diagnostic-error]
    std::optional<std::chrono::milliseconds> timeout;
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:33:24: error: no member named "chrono" in namespace "std" [clang-diagnostic-error]
    std::optional<std::chrono::milliseconds> timeout;
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17404/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:33:10:
error: no template named "optional" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17404/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19507/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19507/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18358/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18358/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16412/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38671/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7108/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20191/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19164/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7016/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27566/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
